# unifetch

./: .gitignore  Cargo.toml  README.md  starter_config.toml
default_config/: wxer_addr.txt
src/: astrological.rs  common.rs  config.rs  datetime.rs  earthquake.rs  main.rs  random.rs  solarlunar.rs  tides.rs  updates.rs
src/wx/: conditions.rs  forecast.rs  mod.rs  tele.rs  weather.rs
