[package]
name = "unifetch"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
clap = { version = "4.3.21", features = ["derive"] }
futures = "0.3.28"
home = "0.5.5"
json = "0.12.4"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.31.0", features = ["macros", "rt-multi-thread"] }

#wxer_lib = { path = "../wxer_lib" }
wxer_lib = { git = "https://github.com/Nicbudd/wxer_lib" }